@@ -31,7 +31,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @ExtendWith(TestRulesAPI.class)
 public class CdsLicenseTests {
@@ -75,6 +74,7 @@ public class CdsLicenseTests {
     @Description("Get list of licenses for customer")
     public void getCustomerLicense() {
         setCustomerData();
+
         ResponseWrapper<Licenses> license = cdsTestUtil.getCommonRequest(CDSAPIEnum.LICENSES_BY_CUSTOMER_ID,
             Licenses.class,
             HttpStatus.SC_OK,
@@ -90,6 +90,7 @@ public class CdsLicenseTests {
     @Description("Get list of licenses for customer")
     public void getCustomerLicenseByIdentity() {
         setCustomerData();
+
         ResponseWrapper<LicenseResponse> licenseResponse = cdsTestUtil.getCommonRequest(CDSAPIEnum.SPECIFIC_LICENSE_BY_CUSTOMER_LICENSE_ID,
             LicenseResponse.class,
             HttpStatus.SC_OK,
@@ -105,6 +106,7 @@ public class CdsLicenseTests {
     @Description("Activate a license.")
     public void activateLicenseTest() {
         setCustomerData();
+
         String userIdentity = PropertiesContext.get("ap-int.${env}.user_staff_identity");
         cdsTestUtil.activateLicense(customerIdentity, siteIdentity, licenseIdentity, userIdentity);
         ResponseWrapper<LicenseResponse> license = cdsTestUtil.getCommonRequest(CDSAPIEnum.SPECIFIC_LICENSE_BY_CUSTOMER_LICENSE_ID,
@@ -122,6 +124,7 @@ public class CdsLicenseTests {
     @Description("Returns a list of licenses for a specific customer site.")
     public void getLicensesOfTheSite() {
         setCustomerData();
+
         ResponseWrapper<Licenses> siteLicenses = cdsTestUtil.getCommonRequest(CDSAPIEnum.LICENSE_BY_CUSTOMER_SITE_IDS,
             Licenses.class,
             HttpStatus.SC_OK,
@@ -137,6 +140,7 @@ public class CdsLicenseTests {
     @Description("Returns a specific license for a specific customer site")
     public void getLicenseOfSiteById() {
         setCustomerData();
+
         ResponseWrapper<LicenseResponse> licenseById = cdsTestUtil.getCommonRequest(CDSAPIEnum.LICENSE_BY_CUSTOMER_SITE_LICENSE_IDS,
             LicenseResponse.class,
             HttpStatus.SC_OK,
@@ -155,8 +159,10 @@ public class CdsLicenseTests {
     public void getActiveModules() {
         setCustomerData();
         String userIdentity = PropertiesContext.get("ap-int.${env}.user_staff_identity");
+
         cdsTestUtil.activateLicense(customerIdentity, siteIdentity, licenseIdentity, userIdentity);
-        ResponseWrapper<ActiveLicenseModules> activeModules = cdsTestUtil.getCommonRequest(CDSAPIEnum.ACTIVE_MODULES, ActiveLicenseModules.class, HttpStatus.SC_OK, customerIdentity, siteIdentity);
+        ResponseWrapper<ActiveLicenseModules> activeModules = cdsTestUtil.getCommonRequest(CDSAPIEnum.ACTIVE_MODULES, ActiveLicenseModules.class, HttpStatus.SC_OK,
+            customerIdentity, siteIdentity);
         soft.assertThat(activeModules.getResponseEntity().getTotalItemCount()).isGreaterThanOrEqualTo(1);
         soft.assertThat(activeModules.getResponseEntity().getItems().get(0).getName()).isNotEmpty();
         soft.assertAll();
@@ -167,7 +173,9 @@ public class CdsLicenseTests {
     @Description("Get a list of modules for inactive license")
     public void getModulesInactiveLicense() {
         setCustomerData();
-        ResponseWrapper<CdsErrorResponse> notActiveLicenseModules = cdsTestUtil.getCommonRequest(CDSAPIEnum.ACTIVE_MODULES, CdsErrorResponse.class, HttpStatus.SC_NOT_FOUND, customerIdentity, siteIdentity);
+
+        ResponseWrapper<CdsErrorResponse> notActiveLicenseModules = cdsTestUtil.getCommonRequest(CDSAPIEnum.ACTIVE_MODULES, CdsErrorResponse.class, HttpStatus.SC_NOT_FOUND,
+            customerIdentity, siteIdentity);
         soft.assertThat(notActiveLicenseModules.getResponseEntity().getMessage()).isEqualTo(String.format("Site, '%s', does not have an active license", siteIdentity));
         soft.assertAll();
     }
@@ -200,6 +208,7 @@ public class CdsLicenseTests {
     public void getSubLicenseIdentity() {
         setCustomerData();
         String userName = generateStringUtil.generateUserName();
+
         ResponseWrapper<User> user = cdsTestUtil.addUser(customerIdentity, userName, customerName);
         userIdentity = user.getResponseEntity().getIdentity();
 
@@ -222,6 +231,7 @@ public class CdsLicenseTests {
     public void addUserSubLicense() {
         setCustomerData();
         String userName = generateStringUtil.generateUserName();
+
         ResponseWrapper<User> user = cdsTestUtil.addUser(customerIdentity, userName, customerName);
         userIdentity = user.getResponseEntity().getIdentity();
 
@@ -233,9 +243,10 @@ public class CdsLicenseTests {
         );
         String subLicenseIdentity = licenseResponse.getResponseEntity().getSubLicenses().stream()
             .filter(x -> !x.getName().contains("master"))
-            .collect(Collectors.toList()).get(0).getIdentity();
+            .toList().get(0).getIdentity();
 
-        ResponseWrapper<SubLicenseAssociationUser> associationUserItemsResponse = cdsTestUtil.addSubLicenseAssociationUser(customerIdentity, siteIdentity, licenseIdentity, subLicenseIdentity, userIdentity);
+        ResponseWrapper<SubLicenseAssociationUser> associationUserItemsResponse = cdsTestUtil.addSubLicenseAssociationUser(customerIdentity, siteIdentity,
+            licenseIdentity, subLicenseIdentity, userIdentity);
 
         soft.assertThat(associationUserItemsResponse.getResponseEntity().getCreatedBy()).isEqualTo("#SYSTEM00000");
         soft.assertAll();
@@ -255,6 +266,7 @@ public class CdsLicenseTests {
     public void getUsersAssociatedWithSubLicense() {
         setCustomerData();
         String userName = generateStringUtil.generateUserName();
+
         ResponseWrapper<User> user = cdsTestUtil.addUser(customerIdentity, userName, customerName);
         userIdentity = user.getResponseEntity().getIdentity();
 
@@ -267,7 +279,7 @@ public class CdsLicenseTests {
 
         String subLicenseIdentity = licenseResponse.getResponseEntity().getSubLicenses().stream()
             .filter(x -> !x.getName().contains("master"))
-            .collect(Collectors.toList()).get(0).getIdentity();
+            .toList().get(0).getIdentity();
 
         cdsTestUtil.addSubLicenseAssociationUser(customerIdentity, siteIdentity, licenseIdentity, subLicenseIdentity, userIdentity);
 
@@ -298,6 +310,7 @@ public class CdsLicenseTests {
     public void getUsersLicenses() {
         setCustomerData();
         String userName = generateStringUtil.generateUserName();
+
         ResponseWrapper<User> user = cdsTestUtil.addUser(customerIdentity, userName, customerName);
         userIdentity = user.getResponseEntity().getIdentity();
 
@@ -310,7 +323,7 @@ public class CdsLicenseTests {
 
         String subLicenseIdentity = licenseResponse.getResponseEntity().getSubLicenses().stream()
             .filter(x -> !x.getName().contains("master"))
-            .collect(Collectors.toList()).get(0).getIdentity();
+            .toList().get(0).getIdentity();
 
         cdsTestUtil.addSubLicenseAssociationUser(customerIdentity, siteIdentity, licenseIdentity, subLicenseIdentity, userIdentity);
 
@@ -339,6 +352,7 @@ public class CdsLicenseTests {
     public void deleteCustomerSubLicense() {
         setCustomerData();
         String userName = generateStringUtil.generateUserName();
+
         ResponseWrapper<User> user = cdsTestUtil.addUser(customerIdentity, userName, customerName);
         userIdentity = user.getResponseEntity().getIdentity();
 
@@ -351,7 +365,7 @@ public class CdsLicenseTests {
 
         String subLicenseIdentity = licenseResponse.getResponseEntity().getSubLicenses().stream()
             .filter(x -> !x.getName().contains("master"))
-            .collect(Collectors.toList()).get(0).getIdentity();
+            .toList().get(0).getIdentity();
 
         cdsTestUtil.addSubLicenseAssociationUser(customerIdentity, siteIdentity, licenseIdentity, subLicenseIdentity, userIdentity);
 
